Fix menu bar overflow on mobile screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,6 +66,7 @@ h6 {
 
 nav {
     display: flex;
+    flex-wrap: wrap;
     gap: 16px;
     padding: 16px 0;
     border-bottom: var(--border-line);
